...
    <string name="session_duration_location" translatable="false">%1s / %2s</string>
    <string name="session_date_duration_location" translatable="false">%1s / %2s / %3s</string>
    <string name="agenda" translation_description="The title for the agenda screen where user can see all the sessions they plan to attend.">Agenda</string>
    <string name="agenda_duration" translatable="false">%1$s – %2$s</string>
    <string name="event_starred" translation_description="The message shown when user adds an event to their schedule.">Event added to your starred items</string>
...
    <string name="a11y_collapse_filters_sheet" translation_description="Description of a button to lower the filters sheet.">Lower filters sheet</string>
    <string name="a11y_clear_tag_filters" translation_description="Description of a button to remove all current tag filters.">Clear filters</string>
    <string name="a11y_filter_applied" translation_description="Alternative text when an event filter is applies">%1s filter applied</string>
    <string name="a11y_filter_not_applied" translation_description="Alternative text when an event filter is not applies">%1s filter not applied</string>

    <string name="a11y_pinned" translation_description="Description of a button that's used to show only starred and reserved events.">Only starred and reserved events</string>
...
    <string name="info_title" translation_description="The title for the info screen where user can see various information, such as FAQ and travel info.">Info</string>
    <string name="event_title" translation_description="The title for the tab that shows interesting events, such as sessions and office hours.">Event</string>
    <string name="travel_title" translation_description="The title for the tab that shows travel information, such as carpool and bus schedules.">Travel</string>
    <string name="faq_title" translation_description="The title for the tab that shows FAQ.">FAQ</string>
    <string name="settings_title" translation_description="Title for the tab that shows all the settings of this app.">Settings</string>
    <string name="about_title" translation_description="Title for the 'About' tab that shows miscellaneous info.">About</string>

    <string name="faq_url" translatable="false">https://events.google.com/io/faq/</string>
...
    <string name="oss_file" translatable="false">file:///android_asset/licenses.html</string>

    <string name="travel_directions_title" translation_description="Header label for driving directions details.">Driving Directions</string>
    <string name="travel_shuttle_title" translation_description="Header label for shuttle service details.">Shuttle Service (Recommended)</string>
    <string name="travel_carpool_parking_title" translation_description="Header label for parking and carpooling details.">Parking &amp; Carpooling</string>
...
    <string name="event_afterhours_description" translation_description="General information on after hours.">After Sessions end for the day, stick around Shoreline for two evenings of food, drinks, and fun. On the first night, the party will take over the Sandbox space, and on the second night, we\'ll have an exclusive concert in the Amphitheatre.</string>
    <string name="event_meals_description" translation_description="General information on meals.">Attendees are offered complimentary breakfast, lunch, and snacks on all three days of the conference. Dinner will also be available on Day 1 and 2 during the After Hours events.</string>
    <string name="wifi_header" translation_description="Header label for wifi information.">Wifi</string>
    <string name="related_apps_header" translation_description="Header label for related apps.">Related Apps</string>
    <string name="event_types_header" translation_description="Header label for information on the different event types.">Event Types</string>
...
    <!--Info pages - Strings ready to translate-->
    <string name="settings_time_zone_label" translate_description="Set time zone in app to PST.">Events in Pacific Time Zone (UTC-8)</string>
    <string name="settings_enable_notifications" translate_description="Turn on notifications.">Enable notifications</string>
    <string name="settings_send_anonymous_usage_statistics" translation_description="Enable sending usage statistics.">Send anonymous usage statistics</string>
    <string name="settings_tos" translation_description="Open link to terms of service.">Terms of service</string>
...
