...
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="@dimen/snackbar_margin_bottom_fab"
            android:layout_marginEnd="@dimen/snackbar_margin_end_fab"
            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filter_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_normal"
            android:contentDescription="@string/filters"
            app:fabSize="auto"
...
